style: add formatter-maven-plugin and fix all remaining 68 line length checkstyle violations